updated and added tests, refactored code smells